# modulate

./: .gitignore  stack.yaml
example/: example.cabal
example/src/: Lib.hs
example/src/Lib/: Bar.hs  Foo.hs
modulate/: README.md  modulate.cabal
modulate/app/: Main.hs
modulate/src/Module/Import/: Preprocess.hs
