name:                example
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/pseudonom/example#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Easley
maintainer:          eric101111@gmail.com
copyright:           Eric Easley 2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lib.Foo
                     , Lib.Bar
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pseudonom/example
