name:                modulate
version:             0.1.0.0
synopsis:            TODO Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/pseudonom/modulate
license:             BSD3
license-file:        LICENSE
author:              Eric Easley
maintainer:          eric101111@gmail.com
copyright:           Eric Easley 2016
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Module.Import.Preprocess
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , text
  default-extensions:  OverloadedStrings

executable modulate
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , modulate
                     , text

source-repository head
  type:     git
  location: https://github.com/pseudonom/modulate
